# tuth

./: .env-dev.example  .env-prod.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.json  .python-version  AGENTS.md  DEV.org  Dockerfile  Dockerfile-dev  Dockerfile-prod  Plantuml  README.org  TESTING.md  TODO.org  agents.md  clear_kash.sh  docker-compose-dev.yml  docker-compose-preprod.yml  docker-compose-prod.yml  docker-compose.yml  draw_class_diagram.sh  env-test  eslint.config.js  import_student_errors.csv  journal.org  js-code-update.sh  manage.py  models_to_exclude.txt  mwe.org  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  rappels.org  reexport.txt  requirements-dev.txt  requirements-test.txt  (+7 more)
.github/workflows/: ci.yml
Scripts/: README.org  parsing_db.org
Scripts/build_targets/: __init__.py  academics.py  registry_finance.py  spaces.py
Seed_data/: README.org  curricula.csv  parsing_db.org  sections.csv
Seed_data/build_import_targets/: README.org  fixtures_manifest.yaml  manual-manifefst
UX/: UI_ENHANCEMENT_GUIDE.md  admin-click-audit.org  architecture-audit.org  bdd.org  mwe.org  tu-web-design-guide.org  ui_maps.org  use-cases.org  ux-click-audit.org
app/: __init__.py  admin.py  app_utils.py  apps.py  asgi.py  constants.py  forms.py  ressources.py  settings-dev.py  settings.py  settings_dev.py  settings_prod.py  settings_test.py  test_settings.py  urls.py  wsgi.py
app/academics/: README.md  __init__.py  apps.py  catalog_reconciliation.py  catalog_reconciliation_actions.py  choices.py  college_normalization.py  constants.py  course_description_backfill.py  course_description_matching.py  course_prerequisite_backfill.py  course_prerequisite_sources.py  current_data_snapshot.py  current_records_snapshot.py  current_usage.py  curriculum_mapping_candidates.py  ensures.py  forms.py  prereq_graph.py  reconciliation_io.py  signals.py  urls.py  utils.py  views.py
app/admin/: __init__.py  academic_admin.py  college_admin.py  filters.py  inlines.py  resources.py  spaces_admin.py  widgets.py
app/constants/: __init__.py  choices.py  curriculum.py  perms.py
app/finance/: README.md  __init__.py  apps.py  choices.py  constants.py  course_fee_policy.py  course_fee_setup.py  fee_assignment.py  fee_stack_defaults.py  historical_clearance.py  historical_clearance_audit.py  payment_application.py  registration_invoices.py  utils.py
app/formats/: __init__.py
app/models/: __init__.py  academics.py  admin.py  constants.py  finance.py  timed.py  (+7 more)
docs/: manual.draft
nginx/: default.conf  selfsigned.crt  tuth.koba.sarl.conf
scripts/: README.org  __init__.py  align_course_code_with_department_code.sql  backfill_curriculum_student_enrollment.sql  backfill_grade_is_effective.sql  backfill_student_curriculum_enrollment.sql  build_tucurricula_source_maps.py  course_merge_conflicts.sql  curriculum_merge_conflicts.sql  curriculum_merge_with_audit.sql  curriculumcourse_merge_conflicts.sql  dedupe_all_students_same_grade_courses.sql  dedupe_single_student_same_grade_courses.sql  dedupe_student_course_grades.sql  dedupe_student_course_identical_final_grade.sql  department_merge_conflicts.sql  extract_tucurricula_imports.py  merge_courses_by_short_code.sql  mwe_portal_smoke.py  normalize_curriculumcourse_level_by_course.sql  populate_simpletable_defaults.sql  preflight_preprod_truth.sh  rebuild_preprod_from_truth.sh  repair_curriculumcourse_other_grouping.sql  set_semester_end_dates.sql  stdcurrienroll_drop_fk_readiness.sql  student_merge_conflicts.sql  update_course_short_code.sql
tests/: README.org  __init__.py  _tests_crud.py  conftest.py  constants.py  safe.py  test_admin_p0_audit_regressions.py  test_admin_remaining_audit_regressions.py  test_college_widget.py  test_course_admin.py  test_course_level.py  test_course_resource.py  test_course_widget.py  test_curriculum_course.py  test_curriculum_resource.py  test_directory_contact_resources.py  test_donor_scholarship.py  test_effective_credit_hours.py  test_faculty_helper.py  test_import_schedule.py  test_import_schedule_cmd.py  test_imports.py  test_make_course_code.py  test_mixins.py  test_model_crud.py  test_models_crud.py  test_parse_int.py  test_populate_sections.py  test_reservation.py  test_reserve_sections.py  test_room_widget.py  test_schedule.py  test_section_autoincrement.py  test_section_availability.py  test_section_resource_fk.py  test_section_resource_import.py  test_section_widgets.py  test_shared_utils.py  test_split_name.py  test_timetable_dates.py  (+3 more)
(+783 files in other folders)
