[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.test_settings"
addopts = "-p no:cacheprovider --assert=plain --strict-markers -q --create-db"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
markers = [
  "selenium: browser-facing end-to-end tests powered by Selenium",
]

# [build-system]
# requires = ["setuptools>=42", "wheel"]
# build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 90
target-version = "py313"
exclude = ["__pycache__", ".git", "migrations", "Seed_data"]

[tool.ruff.lint]
select = ["B", "C90", "D", "E", "F", "W"]
# Keep the historical Flake8 policy while Ruff replaces Black and Flake8.
ignore = [
  "B009",
  "C901",  # 'func' is too complex
  "D101",  # missing docstring in public class
  "D102",
  "D103",  # missing docstring in public function/class
  "D105",  # Missing docstring in magic method  
  "D106",  # Missing docstring in public nested class
  "D107",  # missing docstring in __init__
  "D202",  # No blank lines allowed after function docstring
  "D401",  # first line should be in imperative mood
  "E203",  # whitespace before ':'
  "E501",  # line too long
  "E741",  # ambiguous variable name
  "F401",
  "W605",  # invalid escape sequence
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
plugins = ["mypy_django_plugin.main"]
exclude = ["Docs/.*","Seed_data/*"]

[[tool.mypy.overrides]]
module = "app.website.views"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "app.settings"
